--- a/dom_TicTacToe_game/dom_TicTacToe_game.css
+++ b/dom_TicTacToe_game/dom_TicTacToe_game.css
@@ -1,11 +1,7 @@
-table{
-  margin: auto;
-}
-
 td{
   border: 2px solid black;
   width: 100px;
   height: 100px;
   font-size: 50px;
-  padding-left: 30px;
+  text-align: center;
 }
